# chess

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  docker-compose.yml  index.html  nginx.conf
chess_web/: Cargo.toml  Dockerfile  index.html
chess_web/src/: components.rs  main.rs  utils.rs
chess_web/src/components/: coordinates.rs
chess_web/src/entities/: board.rs  chess_board.rs  position.rs  stone.rs
chess_web/src/handlers/: mouse.rs
chess_web/src/styles/: global.scss
chess_web/src/styles/chess/: board.scss  pieces.scss  squares.scss
chess_web/src/utils/: class_list.rs  elements.rs  style.rs
chess_web/static/: styles.css
src/: entities.rs  handlers.rs  main.rs
src/entities/: board.rs  position.rs
src/handlers/: chess_drag.rs  chess_mouse.rs  mouse.rs
src/utils/: class_list.rs  elements.rs  style.rs
static/: styles.css
