[package]
name = "chess_web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["DataTransfer", "Document", "DomRect", "DragEvent", "Element", "ElementCreationOptions"] }
wasm-bindgen = "0.2.83"
